# lampy

./: .gitignore  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py  index.rst  installing.rst  intensity_graphs.rst
git/hooks/: pre-rebase.sample  prepare-commit-msg.sample
lampy/: BalmerLines.py  Extinction.py  Plot.py  __init__.py  balmerlines.py  extinction.py  workinprogress.py
lampy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lampy/data/: extinction-edenhofer2023.txt
licenses/: LICENSE.rst
